create layout for about and change page from html to md

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,63 +1,14 @@
 ---
-title: About the book and the authors
-date: 2016-11-03 18:48:00 Z
-layout: subnav
+layout: default
 ---
-
 <div class="main-content">
-                <h2 id="about-book" class="about">About the book</h2>
-                <p>Why do dogs slurp from their drinking
-bowls while cats lap up water with a
-delicate flick of the tongue? How does a
-tiny turtle hatchling from Florida circle
-the entire northern Atlantic before
-returning to the very beach where it was
-born? And how can a Komodo dragon kill
-a water buffalo with a bite only as strong
-as a domestic cat's?
-                </p>
-                <p>These puzzles &mdash; and many more besides
-&mdash; are all explained by physics. From heat
-and light to electricity and magnetism,
-Furry Logic unveils the ways that animals exploit physics to eat,
-drink, mate and dodge death in their daily
-battle for survival.</p>
-<p>&nbsp;</p>
-                <h2 id="about-authors" class="about">About the authors</h2>
-                <p><img src="/img/liz.jpg" height="118" width="117" class="profile" alt="Photo Liz Kalaugher"><strong>Liz Kalaugher</strong>
-is a science and
-environment writer
-based in Bristol,
-UK. Fascinated
-by animals since a
-childhood encounter
-with a squashed frog, she is a particular fan
-of bats, bees and badgers. After winning
-journalism fellowships from the World
-Federation of Science Journalists and the
-European Geosciences Union, Liz has
-also reported on beluga whales in the
-Canadian Arctic and Finnish reindeer. She
-has a materials science degree from Oxford
-University and a PhD in thin-film diamond. She blogs at  <a href="https://lizkalaugher.net/">lizkalaugher.net</a>.</p>
-<p>&nbsp;</p>
-
-<p><img src="/img/matin.jpg" height="118" width="117" class="profile" alt="Photo Matin Durrani"><strong>Matin Durrani</strong>
-is editor of the
-international
-magazine Physics
-World, where he enjoys
-telling the stories that
-underpin physics and
-showing how it impacts so much of everyday
-life. Based in Bristol, UK, he first became
-intrigued by how animals use physics after
-publishing a special issue of Physics World on
-the subject in 2012. Matin has a degree in
-chemical physics and did a PhD and postdoc
-squashing food gels at Cambridge University
-before moving into publishing. He blogs at <a href="http://www.matindurrani.net/">matindurrani.net</a>.</p>
-<p>&nbsp;</p>
+    <h2 id="about-book" class="about">{{ page.about_book }}</h2>
+        {{ page.about_book_text | markdownify }}
+<h2 id="about-authors" class="about">{{ page.about_authors }}</h2>
+    <p><img src="/img/liz.jpg" height="118" width="117" class="profile" alt="Photo Liz Kalaugher"><strong>Liz Kalaugher</strong></p>
+{{ page.about_liz_text }}
+<p><img src="/img/matin.jpg" height="118" width="117" class="profile" alt="Photo Matin Durrani"><strong>Matin Durrani</strong></p>
+{{ page.about_matin_text }}
 <h2 id="chapters" class="about">Contents</h2>
 <h3>CHAPTER ONE</h3>
 <p class="pushdown-20"><em>Heat: The Warm-up Chapter</em><br />
