--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 <div class="main-content">
-    <h2 id="about-book" class="about">{{ page.about_book }}</h2>
-        {{ page.about_book_text | markdownify }}
-<h2 id="about-authors" class="about">{{ page.about_authors }}</h2>
+    <h2 id="about-book" class="about">{{ page.about_book_heading }}</h2>
+        {{ content }}
+<h2 id="about-authors" class="about">{{ page.about_authors_heading }}</h2>
     <p><img src="/img/liz.jpg" height="118" width="117" class="profile" alt="Photo Liz Kalaugher"><strong>Liz Kalaugher</strong></p>
 {{ page.about_liz_text }}
 <p><img src="/img/matin.jpg" height="118" width="117" class="profile" alt="Photo Matin Durrani"><strong>Matin Durrani</strong></p>
