add paragraohs on about page

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,11 +5,14 @@ layout: subnav
 <div class="main-content">
     <h2 id="about-book" class="about">{{ page.about_book_heading }}</h2>
         {{ content }}
+        <p>&nbsp;</p>
 <h2 id="about-authors" class="about">{{ page.about_authors_heading }}</h2>
     <p><img src="/img/liz.jpg" height="118" width="117" class="profile" alt="Photo Liz Kalaugher"><strong>Liz Kalaugher</strong></p>
 {{ page.about_liz_text }}
+<p>&nbsp;</p>
 <p><img src="/img/matin.jpg" height="118" width="117" class="profile" alt="Photo Matin Durrani"><strong>Matin Durrani</strong></p>
 {{ page.about_matin_text }}
+<p>&nbsp;</p>
 <h2 id="chapters" class="about">Contents</h2>
 <h3>CHAPTER ONE</h3>
 <p class="pushdown-20"><em>Heat: The Warm-up Chapter</em><br />
