--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,10 +8,10 @@ layout: subnav
         <p>&nbsp;</p>
 <h2 id="about-authors" class="about">{{ page.about_authors_heading }}</h2>
     <p><img src="/img/liz.jpg" height="118" width="117" class="profile" alt="Photo Liz Kalaugher"><strong>Liz Kalaugher</strong></p>
-{{ page.about_liz_text }}
+{{ page.about_liz_text | markdownify }}
 <p>&nbsp;</p>
 <p><img src="/img/matin.jpg" height="118" width="117" class="profile" alt="Photo Matin Durrani"><strong>Matin Durrani</strong></p>
-{{ page.about_matin_text }}
+{{ page.about_matin_text | markdownify }}
 <p>&nbsp;</p>
 <h2 id="chapters" class="about">Contents</h2>
 <h3>CHAPTER ONE</h3>
